Add bin/setup helper

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "go install github.com/onsi/ginkgo/v2/ginkgo"
+	"postCreateCommand": "bin/setup"
 
 	// Configure tool-specific properties.
 	// "customizations": {},
