--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,8 +36,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-build-
 
-      - name: Run Setup
+      - name: Run setup
         run: bin/setup
 
-      - name: Run Tests
+      - name: Run tests
         run: bin/test ci
