--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,26 +18,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: stable
+          check-latest: true
           cache: true
+          cache-dependency-path: go.sum
 
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-
-      - name: Cache Go build cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/go-build
-          key: ${{ runner.os }}-go-build-${{ hashFiles('**/*.go', '**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-build-
-
-      - name: Run setup
+      - name: Run Setup
         run: bin/setup
 
-      - name: Run tests
+      - name: Run Tests
         run: bin/test ci
