--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,10 +18,15 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "bin/setup"
+	"postCreateCommand": "bin/setup",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
+
+	"remoteEnv": {
+		"EDITOR": "code --wait",
+		"PATH": "${containerWorkspaceFolder}/bin:${containerEnv:PATH}"
+	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
